2007-01-28  Daniel Elstner  <daniel.kitta@gmail.com>

	* gtk/src/actiongroup.ccg (ActionGroup::add): Don't use NULL but
	static_cast<char*>(0) to terminate the g_object_get() varargs list,
	to prevent serious breakage on 64-bit systems without GCC magic.
	Please, everyone, do me a favor and don't use NULL in C++ code,
	especially not in conjunction with varargs.  Thanks.

2.10.7:

2007-01-25  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/main.ccg: Destructor: Call the cleanup functions, instead of calling 
	init again. This seems to be a copy/paste error from April 2003. 
	Bug #383340 from Christopher Raine.

2007-01-20  Murray Cumming  <murrayc@murrayc.com>

	* docs/index.html: Add a Google search, restricted to the gtkmm documentation.

2007-01-12  Marko Anastasov  <marko@marko.anastasov.name>

	* gtk/src/printoperation.ccg: Specify a template specialization for
	Glib::unwrap() to avoid ambiguities detected and reported as errors
	in Sun Workshop on OpenSolaris. Bug #395572 from Tim Mooney.

2006-12-21  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: libglade with derived widgets: Add more explanation 
	about the BaseObjectType typedef.
	Patch from Martin Nordholts in bug #387708.

2006-12-11  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/sizegroup.hg: Added class documentation.

2.10.6:

2006-11-28  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/drawable.hg: create_cairo_context(): Specify true to 
	the Cairo::Context constructor because we have a starting reference. 
	This should prevent a leak an extra reference.
	* gtk/src/printcontext.hg: get_cairo_context():
	* gtk/src/printjob.hg: get_surface(): Pass false to the Cairo constructor, 
	because we do not receive a reference, and do not use refreturn(). Previously 
	we did two references were one was needed.

2.10.5:

2006-11-24  Johannes Schmid <johannes.schmid@openismus.com>

	* gtk/src/uimanager.ccg:
	Fixed a crasher in error handling when exceptions are disabled 
