@@ -1,3 +1,9 @@
+2007-02-11  Marko Anastasov  <marko@marko.anastasov.name>
+
+	* docs/tutorial/gtkmm-tut.xml: Updated chapter on internationalization.
+	Explains how to set up an autotools-based project, the use of intltool,
+	basic instructions how to add a translation and a resources list.
+
 2007-01-28  Daniel Elstner  <daniel.kitta@gmail.com>
 
 	* gtk/src/actiongroup.ccg (ActionGroup::add): Don't use NULL but
